fixed img width on small screens

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -96,7 +96,7 @@ h1, h2, h3 {
     height: 100%;
     img {
         max-height: 82vh;
-        //max-width: 100vw;
+        max-width: 100%;
         margin: auto;
     }
     .slick-list, .slick-track {
